<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_help"
          android:title="@string/action_help"
          android:icon="@drawable/ic_help_white_24dp"
          app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_user"
        android:title="@string/action_delete_user"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_credits"
        android:title="@string/action_credits"
        app:showAsAction="never"/>

</menu>
